增加配置